# AlertmanagerExt

./: .gitignore  Cargo.toml  Readme.md  config.yaml  json.json
alertmanager_ext_server/: .gitignore  Cargo.toml  README.md
alertmanager_ext_server/src/: cli.rs  config.rs  error_response.rs  extractors.rs  lib.rs  main.rs  middlewares.rs  openapi.rs  server.rs  state.rs  traits.rs
alertmanager_ext_server/src/extractors/: json.rs  path.rs  query.rs
alertmanager_ext_server/src/middlewares/: method_not_allowed.rs  mod.rs  trace_response_body.rs
alertmanager_ext_server/src/routes/: health.rs  metrics.rs  mod.rs  models.rs  push.rs
models/: Cargo.toml
models/src/: lib.rs  utils.rs
models_utilities/jinja_renderer/: Cargo.toml  template.j2
models_utilities/jinja_renderer/src/: lib.rs
plugins/file_plugin/: Cargo.toml
plugins/file_plugin/src/: error.rs  lib.rs
plugins/file_plugin/src/impls/: plugin.rs  push.rs
plugins/filter_plugin/: Cargo.toml
plugins/filter_plugin/src/: error.rs  lib.rs
plugins/filter_plugin/src/impls/: plugin.rs  push.rs
plugins/mongo_plugin/: Cargo.toml
plugins/mongo_plugin/src/: error.rs  lib.rs  models.rs
plugins/mongo_plugin/src/database/models/: alert.rs  group.rs  mod.rs
plugins/mongo_plugin/src/impls/: plugin.rs  push.rs
plugins/mysql_ox_plugin/: .env  Cargo.toml
plugins/mysql_ox_plugin/migrations/: 20231209092820_init.up.sql
plugins/mysql_ox_plugin/queries/initialize/: init.sql
plugins/mysql_ox_plugin/src/: error.rs  lib.rs
plugins/mysql_ox_plugin/src/database/models/: alerts.rs  annotations.rs  (+3 more)
plugins/mysql_ox_plugin/src/impls/: plugin.rs  push.rs
plugins/postgres_definitions/: Cargo.toml  sql_playground.sql
plugins/postgres_definitions/migrations/2023-12-04-184326_initial/: down.sql  up.sql
plugins/postgres_definitions/src/database/: schema.rs
plugins/postgres_plugin/: Cargo.toml  diesel.toml  sql_playground.sql
plugins/postgres_plugin/migrations/2023-11-19-124619_initial/: down.sql  up.sql
plugins/postgres_plugin/src/: error.rs  lib.rs
plugins/postgres_plugin/src/database/: schema.rs
plugins/postgres_plugin/src/impls/: plugin.rs  pull.rs  push.rs
plugins/postgres_sea_plugin/: .env  Cargo.toml
plugins/postgres_sea_plugin/migration/: Cargo.toml
plugins/postgres_sea_plugin/migration/src/: m20220101_000001_create_table.rs
plugins/postgres_sea_plugin/src/: error.rs  lib.rs
plugins/postgres_sea_plugin/src/entities/: alerts.rs  alerts_annotations.rs  alerts_labels.rs  annotations.rs  common_annotations.rs  common_labels.rs  groups_common_annotations.rs  groups_common_labels.rs  groups_labels.rs  labels.rs  mod.rs
plugins/postgres_sea_plugin/src/entities_ext/: mod.rs
plugins/postgres_sea_plugin/src/entity/: alerts.rs  alerts_annotations.rs  alerts_labels.rs  annotations.rs  common_annotations.rs  common_labels.rs  groups.rs  groups_common_annotations.rs  groups_common_labels.rs  groups_labels.rs  labels.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs
plugins/postgres_sea_plugin/src/entity_ext/: mod.rs
plugins/postgres_sea_plugin/src/impls/: mod.rs  plugin.rs  push.rs
plugins/postgres_x_plugin/: .env  Cargo.toml  Readme.md  build.rs
plugins/postgres_x_plugin/.sqlx/: query-0cffca05a69d48eb93c6a4c10360c479332d5dbd3fca8a4d4877b9dc49dea904.json  query-1dc3e1b59d2e1d0cbd733437435eedbd65c1382a69642aea6846bc717f8ce828.json  query-78e8f5bc3bd3f4b646a2cbc1f4cbe783ff51f49b8d672029f9b5c65756be748f.json  query-7d447f1e5d5a9c5402062d89add1cd859ff61c52fa2edef678b754b4551c8ffe.json  query-7dd77ba009af2e73376eda2def02db20a8692fec583090dd5a75974d853ae5e8.json  query-8a31f178b5c4ccd8c66cc5cad7400dc6f343a943de1ffca5752670ab5be6f4a2.json  query-969ab3431f68b94fa6509699985a18f289daa2ea595b2840d9eab70346011ccd.json  query-971e8bd22ff1a8321e9fb4db40bdf0b4af80ab1b91c4eb337ba642573f4e440c.json  query-a99d7b5ff878f7f37edff655d209db873dd76768ddcf59f22fe0df8b9d2f6919.json  query-abbb67e838691097ec4b076d2fd4a87124637c0ec0acc155d8f3f80e5514f73c.json  query-ac47993b41188e56f82fd8b2340885a3dbe9fc6935cc975f90469eba56d75a8b.json  query-b9532c2686f4659983f409e51468ebdf8364481ba04edd3262309f24d41f5a1c.json  query-bb71e693144397cf45882ae38344c2b0e95bbbd96381b47663ea143420382086.json  query-c1451b4932735dff3bac0ce2a9ea9e9f2b2f90656b7e8f648b13825855875d1d.json  query-cfd8500ce6c511a5803ef6a684d31f8a1254a159e1eddb4c3edb6928ce8ab6ac.json  query-db041994680fe824b1c2a32d1214b26ace8539a92fd41b4279f2656fd9e75048.json  query-ea1e2b5ffc1d7d28af3ffade8b782e2e841a0617618165b4863c78aa4f37274a.json  query-f6bc25536247fd41e9567c76878ba09b1e5fe3d5669ca276afcdd6ddf8a152c5.json
plugins/postgres_x_plugin/migrations/: 20231209092022_init.down.sql  20231209092022_init.up.sql
plugins/postgres_x_plugin/queries/: pull_alerts.sql
plugins/postgres_x_plugin/queries/initialize/: 01_alert_status.sql  02_after_alert_status.sql  02_groups.sql  03_alerts.sql  04_labels.sql  05_annotations.sql  06_common_labels.sql  07_common_annotations.sql  08_groups_labels.sql  09_groups_common_labels.sql  10_groups_common_annotations.sql  11_alerts_labels.sql  12_alerts_annotations.sql
plugins/postgres_x_plugin/src/: error.rs  lib.rs
plugins/postgres_x_plugin/src/impls/: plugin.rs  pull.rs  push.rs
plugins/print_plugin/: Cargo.toml
plugins/print_plugin/src/: error.rs  lib.rs
plugins/print_plugin/src/impls/: plugin.rs  push.rs
plugins/sqlite_plugin/: .env  Cargo.toml  Readme.md
plugins/sqlite_plugin/migrations/2023-11-30-193445_initial/: down.sql  up.sql
plugins/sqlite_plugin/src/: error.rs  lib.rs
plugins/sqlite_plugin/src/database/: schema.rs
plugins/sqlite_plugin/src/impls/: mod.rs  plugin.rs  push.rs
push/push_definitions/: Cargo.toml
push/push_definitions/src/: lib.rs
push/push_server/: .gitignore  Cargo.toml  README.md  sample-payload.json
push/push_server/src/: api_response.rs  api_traits.rs  error_response.rs  errors.rs  extractors.rs  lib.rs  main.rs  openapi.rs  prometheus_client.rs  push_response.rs  server.rs  state.rs  traits.rs
push/push_server/src/routes/: health.rs  metrics.rs  mod.rs  models.rs  push.rs  utils.rs
(+90 files in other folders)
