[workspace]
members = [
    "models",
    "models_utilities/random_models_generator",
    "models_utilities/jinja_renderer",
    "push/push_definitions",
    "pull/pull_definitions",
    "alertmanager_ext_server",
    "plugins/plugins_definitions",
    "plugins/postgres_plugin",
    "plugins/postgres_x_plugin",
    "plugins/postgres_sea_plugin",
    "plugins/postgres_sea_plugin/migration",
    "plugins/mysql_ox_plugin",
    "plugins/mongo_plugin",
    "plugins/sqlite_plugin",
    "plugins/print_plugin",
    "plugins/ntfy_plugin",
    "plugins/file_plugin",
    "plugins/filter_plugin",
]
resolver = "2"
default-members = ["alertmanager_ext_server"]

[profile.dev.package.sqlx-macros]
opt-level = 3

[workspace.dependencies]
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "time"] }
tracing-test = "0.2.4"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "cors"] }
async-trait = "0.1.74"
thiserror = "1.0.50"
anyhow = "1.0.75"
schemars = { version = "0.8.15", features = ["chrono", "url"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_with = { version = "3.4.0", features = ["chrono_0_4", "chrono"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
axum = "0.6.20"
hyper = "0.14.27"
tokio = { version = "1.34.0", features = ["full"] }
utoipa = { version = "4.1.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }
utoipa-redoc = { version = "1.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "1.0.0", features = ["axum"] }
prometheus-client = "0.22.0"
chrono = { version = "0.4.31", features = ["serde"] }
rand = "0.8.5"
dotenv = "0.15.0"
