[workspace]
members = [
    "models",
    "models_utilities/random_models_generator",
    "models_utilities/jinja_renderer",
    "models_utilities/formatter",
    "push/push_definitions",
    "pull/pull_definitions",
    "alertmanager_ext_server",
    "plugins_utilities/plugins_filter",
    "plugins/plugins_definitions",
    "plugins/postgres_plugin",
    "plugins/postgres_x_plugin",
    "plugins/postgres_sea_plugin",
    "plugins/postgres_sea_plugin/migration",
    "plugins/mongo_plugin",
    "plugins/sqlite_plugin",
    "plugins/print_plugin",
    "plugins/ntfy_plugin",
    "plugins/file_plugin",
    "plugins/filter_plugin",
]
resolver = "2"
default-members = ["alertmanager_ext_server"]

[profile.dev.package.sqlx-macros]
opt-level = 3

[workspace.dependencies]
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
tracing-test = "0.2.4"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace", "cors"] }
async-trait = "0.1.77"
thiserror = "1.0.56"
anyhow = "1.0.79"
schemars = { version = "0.8.16", features = ["chrono", "url"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_with = { version = "3.6.0", features = ["chrono_0_4", "chrono"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
axum = "0.7.4"
http-body-util = "0.1.0"
tokio = { version = "1.35.1", features = ["full"] }
utoipa = { version = "4.1.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "3.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
prometheus-client = "0.22.1"
chrono = { version = "0.4.33", features = ["serde"] }
rand = "0.8.5"
dotenv = "0.15.0"
url = { version = "2.5.0", features = ["serde"] }
