[package]
name = "alertmanager_ext_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
axum-test = "13.4.1"
random_models_generator = { path = "../models_utilities/random_models_generator" }
formatter = { path = "../models_utilities/formatter" }
url = { workspace = true }

[dependencies]
models = { path = "../models" }
push_definitions = { path = "../push/push_definitions" }
plugins_definitions = { path = "../plugins/plugins_definitions" }
postgres_plugin = { path = "../plugins/postgres_plugin" }
postgres_sea_plugin = { path = "../plugins/postgres_sea_plugin" }
postgres_x_plugin = { path = "../plugins/postgres_x_plugin" }
mongo_plugin = { path = "../plugins/mongo_plugin" }
sqlite_plugin = { path = "../plugins/sqlite_plugin" }
file_plugin = { path = "../plugins/file_plugin" }
print_plugin = { path = "../plugins/print_plugin" }
filter_plugin = { path = "../plugins/filter_plugin" }
plugins_filter = { path = "../plugins_utilities/plugins_filter" }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing-test = { workspace = true }
anyhow = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-redoc = { workspace = true }
utoipa-rapidoc = { workspace = true }
prometheus-client = { workspace = true }
clap = { version = "4.4.3", features = ["derive", "env"] }
