[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = { workspace = true }
serde = { workspace = true }
utoipa = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.6.1", features = ["v4"] }
serde_with = { version = "3.4.0", features = ["chrono_0_4", "chrono"] }
