[package]
name = "filter_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
push_definitions = { path = "../../push/push_definitions" }
plugins_definitions = { path = "../plugins_definitions" }
models = { path = "../../models" }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
regex = "1.10.2"
