[package]
name = "filter_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
serde_yaml = { workspace = true }

[dependencies]
push_definitions = { path = "../../push/push_definitions" }
plugins_definitions = { path = "../plugins_definitions" }
models = { path = "../../models" }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
url = { workspace = true }
serde_with = { workspace = true }
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
