[package]
name = "mongo_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
push_definitions = { path = "../../push/push_definitions" }
plugins_definitions = { path = "../plugins_definitions" }
models = { path = "../../models" }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
chrono = { versio = "0.4.31", features = ["serde"] }
mongodb = "2.7.1"
