[package]
name = "mysql_ox_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
random_models_generator = { path = "../../models_utilities/random_models_generator" }

[dependencies]
push_definitions = { path = "../../push/push_definitions" }
pull_definitions = { path = "../../pull/pull_definitions" }
plugins_definitions = { path = "../plugins_definitions" }
models = { path = "../../models" }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-test = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
dotenv = { workspace = true }
ormx = { version = "0.7", features = ["mysql"] }
sqlx = { version = "0.5", features = [
    "mysql",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
