[package]
name = "postgres_definitions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
push_definitions = { path = "../../push/push_definitions" }
pull_definitions = { path = "../../pull/pull_definitions" }
plugins_definitions = { path = "../plugins_definitions" }
models = { path = "../../models" }
diesel = { version = "2.1.2", features = ["chrono", "postgres", "time"] }
chrono = { workspace = true }
sqlx = { version = "0.7.2", features = ["macros", "chrono"] }
