[package]
name = "postgres_x_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
push_definitions = { path = "../../push/push_definitions" }
pull_definitions = { path = "../../pull/pull_definitions" }
plugins_definitions = { path = "../plugins_definitions" }
models = { path = "../../models" }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
# because of reasons.. bundled
rusqlite = { version = "0.29.0", features = ["bundled"] }
sqlx = { version = "0.7.2", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
