[package]
name = "sqlite_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
push_definitions = { path = "../../push/push_definitions" }
plugins_definitions = { path = "../plugins_definitions" }
models = { path = "../../models" }
diesel = { version = "2.1.2", features = [
    "sqlite",
    "chrono",
    "returning_clauses_for_sqlite_3_35",
    "i-implement-a-third-party-backend-and-opt-into-breaking-changes", # For the exits clause
] }
deadpool-diesel = { version = "0.5.0", features = ["sqlite"] }
# because of reasons.. bundled
rusqlite = { version = "0.29.0", features = ["bundled"] }
