[package]
name = "push_definitions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapi = { path = "../../alertmanager_api_v2" }
async-trait = { workspace = true }
thiserror = { workspace = true }
