[package]
name = "push_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../../models" }
push_definitions = { path = "../push_definitions" }
plugins_definitions = { path = "../../plugins/plugins_definitions" }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
aide = { workspace = true, features = ["axum"] }
