[package]
name = "push_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../../models" }
push_definitions = { path = "../push_definitions" }
plugins_definitions = { path = "../../plugins/plugins_definitions" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
aide = { workspace = true }
axum-jsonschema = { version = "0.7.0", features = ["aide"] }
axum-macros = "0.3.8"
serde_json = "1.0.108"
async-trait = { workspace = true }
