[package]
name = "push_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../../models" }
push_definitions = { path = "../push_definitions" }
plugins_definitions = { path = "../../plugins/plugins_definitions" }
postgres_plugin = { path = "../../plugins/postgres_plugin" }
mongo_plugin = { path = "../../plugins/mongo_plugin" }
sqlite_plugin = { path = "../../plugins/sqlite_plugin" }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-redoc = { workspace = true }
utoipa-rapidoc = { workspace = true }
prometheus-client = { workspace = true }
